force-app/main/default/objects/Account/fields/Account_Source_Text__c.field-meta.xml
<CustomField>
    <fullName>Account_Source_Text__c</fullName>
    <label>Account Source Text</label>
    <type>TextArea</type>
</CustomField>