force-app/main/default/objects/Account/fields/AG_Comments__c.field-meta.xml
<CustomField>
    <fullName>AG_Comments__c</fullName>
    <description>Angel Gonzalez&#39;s Comments on this Account</description>
    <inlineHelpText>Angel Gonzalez&#39;s Comments on this Account</inlineHelpText>
    <label>AG Comments</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>