force-app/main/default/objects/Account/fields/Alt_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Alt_Business_Name__c</fullName>
    <label>Alt Business Name</label>
    <type>TextArea</type>
</CustomField>