force-app/main/default/objects/Account/fields/Annual_Asset_Volume__c.field-meta.xml
<CustomField>
    <fullName>Annual_Asset_Volume__c</fullName>
    <description>$ Volume per Year</description>
    <label>Annual Asset Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>