force-app/main/default/objects/Account/fields/Asset_Classes__c.field-meta.xml
<CustomField>
    <fullName>Asset_Classes__c</fullName>
    <description>What asset classes would we be providing shipping solutions for?</description>
    <inlineHelpText>What asset classes would we be providing shipping solutions for?</inlineHelpText>
    <label>Asset Classes for RC</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RC-Dunnage</fullName>
            </value>
            <value>
                <fullName>RC_Reusable Packaging</fullName>
                <label>RC–Reusable Packaging</label>
            </value>
            <value>
                <fullName>RC–IT–Computers &amp; Peripheral</fullName>
            </value>
            <value>
                <fullName>RC–IT–Networking/Telecom</fullName>
            </value>
            <value>
                <fullName>RC–Medical</fullName>
            </value>
            <value>
                <fullName>RC-Medical Waste</fullName>
            </value>
            <value>
                <fullName>RC–Non-Medical Instruments</fullName>
            </value>
            <value>
                <fullName>RC-OE–Mailing Equipment</fullName>
            </value>
            <value>
                <fullName>RC-OE–Office &amp; Accounting</fullName>
            </value>
            <value>
                <fullName>RC-OE–Photocopy &amp; Related</fullName>
            </value>
            <value>
                <fullName>NonRC– IND–Fabricated Metal Products</fullName>
            </value>
            <value>
                <fullName>NonRC–Indl - Forklifts/Materials hand</fullName>
            </value>
            <value>
                <fullName>NonRC–IND–Metalworking Machinery</fullName>
            </value>
            <value>
                <fullName>NonRC–IND–Special Ind&#39;l Machinery, NEC</fullName>
            </value>
            <value>
                <fullName>NonRC– Other–Agricultural Machinery</fullName>
            </value>
            <value>
                <fullName>NonRC–Other–Constr. Machinery</fullName>
            </value>
            <value>
                <fullName>NonRC– Other–Mining &amp; Oilfield Mach</fullName>
            </value>
            <value>
                <fullName>NonRC–Software</fullName>
            </value>
            <value>
                <fullName>NonRC– TRANS–Aircraft</fullName>
            </value>
            <value>
                <fullName>NonRC– TRANS–Automobiles</fullName>
            </value>
            <value>
                <fullName>NonRC– TRANS–Railroad Equipment</fullName>
            </value>
            <value>
                <fullName>NonRC– TRANS–Ships &amp; Boats</fullName>
            </value>
            <value>
                <fullName>NonRC–TRANS–Trucks, Trailers &amp; Buses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>