force-app/main/default/objects/Account/fields/BTA_District__c.field-meta.xml
<CustomField>
    <fullName>BTA_District__c</fullName>
    <label>BTA District</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Eastern</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>MidAmerica</fullName>
            </value>
            <value>
                <fullName>Southeast</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>