force-app/main/default/objects/Account/fields/Business_Referral_Form_Signed__c.field-meta.xml
<CustomField>
    <fullName>Business_Referral_Form_Signed__c</fullName>
    <label>Business Referral Form Signed</label>
    <type>Date</type>
</CustomField>