force-app/main/default/objects/Account/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <description>Category / industry of company or contact</description>
    <inlineHelpText>Enter the category contacts from this company will fall within</inlineHelpText>
    <label>Business Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Copier Dealer</fullName>
            </value>
            <value>
                <fullName>Industry Organization/Association</fullName>
            </value>
            <value>
                <fullName>Lessor</fullName>
            </value>
            <value>
                <fullName>Local Agent</fullName>
            </value>
            <value>
                <fullName>Logistics Provider</fullName>
                <label>Logistics Provider/3PL</label>
            </value>
            <value>
                <fullName>OEM / Retailer / VAR</fullName>
            </value>
            <value>
                <fullName>Potential Investor</fullName>
            </value>
            <value>
                <fullName>Recycler/Remarketer</fullName>
            </value>
            <value>
                <fullName>Reusable Packaging User</fullName>
            </value>
            <value>
                <fullName>RFID</fullName>
            </value>
            <value>
                <fullName>Track &amp; Trace Reseller</fullName>
            </value>
            <value>
                <fullName>Vendor/Supplier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>