force-app/main/default/objects/Account/fields/Credit_App_Approved__c.field-meta.xml
<CustomField>
    <fullName>Credit_App_Approved__c</fullName>
    <label>Credit App Approved</label>
    <type>Date</type>
</CustomField>