force-app/main/default/objects/Account/fields/Current_Services__c.field-meta.xml
<CustomField>
    <fullName>Current_Services__c</fullName>
    <inlineHelpText>Lines of business this account currently buys on a regular basis</inlineHelpText>
    <label>Current Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled Returns</fullName>
            </value>
            <value>
                <fullName>ReturnCenter Referral</fullName>
            </value>
            <value>
                <fullName>ReturnCenter Connected</fullName>
            </value>
            <value>
                <fullName>ReturnCenter Integrated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>