force-app/main/default/objects/Account/fields/Dealer_Groups__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Groups__c</fullName>
    <label>Dealer Groups</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BTA</fullName>
            </value>
            <value>
                <fullName>CDA</fullName>
            </value>
            <value>
                <fullName>IBPI</fullName>
            </value>
            <value>
                <fullName>Pro Dealers Group</fullName>
            </value>
            <value>
                <fullName>Select Dealers Group</fullName>
            </value>
            <value>
                <fullName>American Co-op (Sharp)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>