force-app/main/default/objects/Account/fields/Est_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Est_Revenue__c</fullName>
    <label>Est. Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>