force-app/main/default/objects/Account/fields/Internal_Comment__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comment__c</fullName>
    <label>Internal Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>