force-app/main/default/objects/Account/fields/JL_Comments__c.field-meta.xml
<CustomField>
    <fullName>JL_Comments__c</fullName>
    <description>Joe Lane&#39;s Comments on this account</description>
    <inlineHelpText>Joe Lane&#39;s Comments on this account</inlineHelpText>
    <label>JL Comments</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>