force-app/main/default/objects/Account/fields/Lease_Return_Policy__c.field-meta.xml
<CustomField>
    <fullName>Lease_Return_Policy__c</fullName>
    <description>Lessor&#39;s policies for renewal and renewal notifications/communications.</description>
    <inlineHelpText>Lessor&#39;s policies for renewal and renewal notifications/communications.</inlineHelpText>
    <label>Lease Return Policy</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>