force-app/main/default/objects/Account/fields/Lessors__c.field-meta.xml
<CustomField>
    <fullName>Lessors__c</fullName>
    <label>Lessors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DLL</fullName>
            </value>
            <value>
                <fullName>GE Capital</fullName>
            </value>
            <value>
                <fullName>Great America</fullName>
            </value>
            <value>
                <fullName>Leaf</fullName>
            </value>
            <value>
                <fullName>Marlin</fullName>
            </value>
            <value>
                <fullName>US Bank</fullName>
            </value>
            <value>
                <fullName>Wells Fargo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>