force-app/main/default/objects/Account/fields/Monthly_Volume__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Volume__c</fullName>
    <description>Number of estimated returns process monthly for this asset class.</description>
    <inlineHelpText>Number of estimated returns process monthly for this asset class.</inlineHelpText>
    <label>Monthly Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>