force-app/main/default/objects/Account/fields/MSA_Signed__c.field-meta.xml
<CustomField>
    <fullName>MSA_Signed__c</fullName>
    <label>MSA Signed</label>
    <type>Date</type>
</CustomField>