force-app/main/default/objects/Account/fields/NDA_Signed__c.field-meta.xml
<CustomField>
    <fullName>NDA_Signed__c</fullName>
    <label>NDA Signed</label>
    <type>Date</type>
</CustomField>