force-app/main/default/objects/Account/fields/OMUA_Signed__c.field-meta.xml
<CustomField>
    <fullName>OMUA_Signed__c</fullName>
    <label>OMUA Signed</label>
    <type>Date</type>
</CustomField>