force-app/main/default/objects/Account/fields/Packet_Mailed__c.field-meta.xml
<CustomField>
    <fullName>Packet_Mailed__c</fullName>
    <label>Packet Mailed</label>
    <type>Date</type>
</CustomField>