force-app/main/default/objects/Account/fields/Percent_pack_ship_only__c.field-meta.xml
<CustomField>
    <fullName>Percent_pack_ship_only__c</fullName>
    <label>Percent pack &amp; ship only</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>