force-app/main/default/objects/Account/fields/Prospective_Services__c.field-meta.xml
<CustomField>
    <fullName>Prospective_Services__c</fullName>
    <description>This account/company is most likely to use these services</description>
    <inlineHelpText>Select ALL the potential products/services that this account/company may potentially buy.</inlineHelpText>
    <label>Prospective Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Circular Logistics</fullName>
            </value>
            <value>
                <fullName>ReturnCenter Integrated</fullName>
            </value>
            <value>
                <fullName>ReturnCenter Referral</fullName>
            </value>
            <value>
                <fullName>Track/Trace/Recover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>