force-app/main/default/objects/Account/fields/Reason_to_Pursue_Not_Pursue__c.field-meta.xml
<CustomField>
    <fullName>Reason_to_Pursue_Not_Pursue__c</fullName>
    <label>Reason to Pursue/Not Pursue</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>