force-app/main/default/objects/Account/fields/Referred_to__c.field-meta.xml
<CustomField>
    <fullName>Referred_to__c</fullName>
    <label>Referred to</label>
    <type>TextArea</type>
</CustomField>