force-app/main/default/objects/Account/fields/SA_Comments__c.field-meta.xml
<CustomField>
    <fullName>SA_Comments__c</fullName>
    <description>Steve Andon&#39;s Comments on this Account</description>
    <inlineHelpText>Steve Andon&#39;s Comments on this Account</inlineHelpText>
    <label>SA Comments</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>