force-app/main/default/objects/Account/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <label>Specialization</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bins</fullName>
            </value>
            <value>
                <fullName>ATMs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>