force-app/main/default/objects/Account/fields/SS_Comments__c.field-meta.xml
<CustomField>
    <fullName>SS_Comments__c</fullName>
    <description>Shawn Stockman&#39;s Comments on this Account</description>
    <inlineHelpText>Shawn Stockman&#39;s Comments on this Account</inlineHelpText>
    <label>SS Comments</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>