force-app/main/default/objects/Account/fields/Stock_Exchange__c.field-meta.xml
<CustomField>
    <fullName>Stock_Exchange__c</fullName>
    <label>Stock Exchange</label>
    <length>25</length>
    <type>Text</type>
</CustomField>