force-app/main/default/objects/Account/fields/Take_Rate__c.field-meta.xml
<CustomField>
    <fullName>Take_Rate__c</fullName>
    <description>This is the percent of the estimated monthly volume we could expect to win as shipments.</description>
    <inlineHelpText>This is the percent of the estimated monthly volume we could expect to win as shipments.</inlineHelpText>
    <label>Take Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>