force-app/main/default/objects/Account/fields/Value_Per_Return__c.field-meta.xml
<CustomField>
    <fullName>Value_Per_Return__c</fullName>
    <description>This is the amount of (top line) revenue we could expect to get for each shipment.</description>
    <inlineHelpText>This is the amount of (top line) revenue we could expect to get for each shipment.</inlineHelpText>
    <label>Value Per Return</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>