force-app/main/default/objects/Account/recordTypes/Task_Industry.recordType-meta.xml
<RecordType>
    <fullName>Task_Industry</fullName>
    <active>true</active>
    <description>Industry shown in Task screens</description>
    <label>Task Industry</label>
</RecordType>