force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>Contact_Type__c</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>Asset_Classes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>