force-app/main/default/objects/Account/listViews/Cable_Wire.listView-meta.xml
<ListView>
    <fullName>Cable_Wire</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.INDUSTRY</field>
        <operation>equals</operation>
        <value>Cable &amp; Wire</value>
    </filters>
    <label>Cable &amp; Wire</label>
</ListView>