force-app/main/default/objects/Account/listViews/Copier_Dealers.listView-meta.xml
<ListView>
    <fullName>Copier_Dealers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Reason_to_Pursue_Not_Pursue__c</columns>
    <columns>ACCOUNT.RATING</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>BTA_District__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact_Type__c</field>
        <operation>equals</operation>
        <value>Copier Dealer</value>
    </filters>
    <filters>
        <field>Dealer_Groups__c</field>
        <operation>equals</operation>
        <value>BTA</value>
    </filters>
    <label>Copier Dealers</label>
</ListView>