force-app/main/default/objects/Account/listViews/Dead_Accounts.listView-meta.xml
<ListView>
    <fullName>Dead_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Reason_to_Pursue_Not_Pursue__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT_SOURCE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RATING</field>
        <operation>equals</operation>
        <value>DEAD</value>
    </filters>
    <filters>
        <field>Contact_Type__c</field>
        <operation>equals</operation>
        <value>Copier Dealer</value>
    </filters>
    <label>Dead Accounts</label>
</ListView>