force-app/main/default/objects/Account/listViews/Dunnage.listView-meta.xml
<ListView>
    <fullName>Dunnage</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Asset_Classes__c</field>
        <operation>equals</operation>
        <value>RC-Dunnage</value>
    </filters>
    <label>Dunnage</label>
</ListView>