force-app/main/default/objects/Account/listViews/Forklifts.listView-meta.xml
<ListView>
    <fullName>Forklifts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Asset_Classes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Asset_Classes__c</field>
        <operation>includes</operation>
        <value>NonRC-IND-Forklifts/Mat’ls handling</value>
    </filters>
    <label>Forklifts</label>
</ListView>