force-app/main/default/objects/Account/listViews/Lessors.listView-meta.xml
<ListView>
    <fullName>Lessors</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Reason_to_Pursue_Not_Pursue__c</columns>
    <columns>ACCOUNT.RATING</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.INDUSTRY</field>
        <operation>contains</operation>
        <value>financ</value>
    </filters>
    <label>Lessors</label>
</ListView>