force-app/main/default/objects/Account/listViews/Lessors_IT.listView-meta.xml
<ListView>
    <fullName>Lessors_IT</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>AG_Comments__c</columns>
    <columns>JL_Comments__c</columns>
    <columns>SS_Comments__c</columns>
    <columns>Reason_to_Pursue_Not_Pursue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Asset_Classes__c</field>
        <operation>includes</operation>
        <value>RC-IT-Computers &amp; Peripheral</value>
    </filters>
    <filters>
        <field>Asset_Classes__c</field>
        <operation>includes</operation>
        <value>RC-IT-Networking/Telecom</value>
    </filters>
    <label>Lessors - IT</label>
</ListView>