force-app/main/default/objects/Account/listViews/Logistics_Providers.listView-meta.xml
<ListView>
    <fullName>Logistics_Providers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact_Type__c</field>
        <operation>equals</operation>
        <value>Logistics Provider</value>
    </filters>
    <label>Logistics Providers</label>
</ListView>