force-app/main/default/objects/Account/listViews/Medical_Equipment.listView-meta.xml
<ListView>
    <fullName>Medical_Equipment</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.URL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Asset_Classes__c</field>
        <operation>includes</operation>
        <value>RC-Medical</value>
    </filters>
    <label>Medical Equipment</label>
</ListView>