force-app/main/default/objects/Account/listViews/NonRC.listView-meta.xml
<ListView>
    <fullName>NonRC</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Asset_Classes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Asset_Classes__c</field>
        <operation>includes</operation>
        <value>NonRC-Other-Constr. Machinery</value>
    </filters>
    <label>NonRC</label>
</ListView>