force-app/main/default/objects/Account/listViews/Vendors.listView-meta.xml
<ListView>
    <fullName>Vendors</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Contact_Type__c</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact_Type__c</field>
        <operation>includes</operation>
        <value>Vendor/Supplier</value>
    </filters>
    <label>Vendors</label>
</ListView>